# utipmitool

./: Cargo.toml  LICENSE-2.0  README.en.md  README.md
doc/: .~tailed_design.docx  detailed_design.docx  detailed_design.md  gaiyao.md  output.docx  test.md  utipmitool-概要设计说明书.md  utipmitool_概要设计说明书.md  xiangxi.md  交接文档.md  命令说明文档.md
ipmi-macros/: Cargo.toml
ipmi-macros/src/: lib.rs  structmeta.rs
src/: cli.rs  debug_control.rs  decode.rs  error.rs  helper.rs  lib.rs  log.rs  logger.rs  logging.rs  main.rs
src/commands/: bootdev.rs  bootparam.rs  identify.rs  mod.rs  poh.rs  restart_cause.rs  selftest.rs
src/commands/bmc/: mod.rs
src/commands/chassis/: common.rs  define_chassis.rs  mod.rs  power.rs  status.rs
src/commands/lan/: mod.rs
src/commands/mc/: mod.rs
src/commands/sdr/: iter.rs  mod.rs  sdr.rs  sdradd.rs  types.rs
src/commands/sel/: define.rs  describe.rs  entry.rs  info.rs  message.rs  mod.rs  sel.rs  supermicro.rs
src/commands/sensor/: mod.rs  sensor.rs
src/interface/: mod.rs
src/ipmi/: constants.rs  context.rs  helper.rs  intf.rs  ipmi.rs  ipmi_constants.rs  ipmi_intf.rs  ipmi_oem.rs  ipmi_session.rs  ipmi_strings.rs  log.rs  mod.rs  oem.rs  picmg.rs  strings.rs  time.rs  vita.rs
unpack/: Cargo.toml
unpack/raw_core/: Cargo.toml
unpack/raw_core/src/: lib.rs  raw_size.rs
unpack/raw_derive/: Cargo.toml
unpack/raw_derive/src/: annotation.rs  lib.rs
unpack/src/: lib.rs
unpack/src/tests/: integration.rs
unpack/src/tests/unit/: rawdata_test.rs
utipmi-sys/: Cargo.toml
utipmi-sys/src/: lib.rs  openipmi_ioctl.rs  syslog.rs
(+7 files in other folders)
