[package]
name = "utipmitool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
bitflags = "2.9.0"
clap = { version = "4.5.31", features = ["derive"] }
#ipmi-rs = "0.4.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
#security = ["secrecy"] # 增强安全特性
secrecy = "0.10.3"
nix = { version = "0.29.0", features = ["ioctl","fs","poll"] }
ipmi-macros = { path = "./ipmi-macros" }
unpack = { path = "./unpack" }
lazy_static = "1.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.0"
log = "0.4.27"
syslog = "7.0.0"
env_logger = "0.11.8"
chrono = "0.4.31"
rpassword = "7.4"
